# biojson

biojson/: pyproject.toml
biojson/tests/: test_datasetjson.py
src/biojson/: datasetjson.py
tests/data/: datasetjson_dm.json
