[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biojson"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache 2.0"
keywords = []
authors = [
  { name = "Gerardo Jose Rodriguez", email = "gerardo.jrac@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Gero1999/biojson#readme"
Issues = "https://github.com/Gero1999/biojson/issues"
Source = "https://github.com/Gero1999/biojson"

[tool.hatch.version]
path = "src/biojson/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/biojson tests}"

[tool.coverage.run]
source_pkgs = ["biojson", "tests"]
branch = true
parallel = true
omit = [
  "src/biojson/__about__.py",
]

[tool.coverage.paths]
biojson = ["src/biojson", "*/biojson/src/biojson"]
tests = ["tests", "*/biojson/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
